css/main.css
/* ... */
.showInMobile {
  display: none;
}
.refhead {
  font-size: 1.8em;
}
.refq {
  font-size: 1.2em;
}

/****** End of Header ******/


/****** Footer ******/

.footer {
  width: 100%;
  background-color: #39465A;
  color: #DDD;
  height: 150px;
  padding: 2em 0;
  font-size: 90%;
  z-index: 15;
}
.footer img, .bioPhoto {
  width: 90px;
  float: left;
  margin: 0 20px;
}
.bioPhoto {
  margin-top: 1em;
}
.footer p {
  margin: 0 1em;
}
.footer ul {
  margin: 0px !important;
  padding: 0 !important;
}
.footer ul>li {
  line-height: 1.6em;
  letter-spacing: .05em;
}
.footer a {
  text-decoration: none;
  color: inherit;
}
.footer p {
  max-width: 630px;
}
.footer a:hover {
  text-decoration: underline;
}
.space {
  width: 100%;
  margin-top: 5em;
  padding: 2em 0;
  float: left;
}

/****** End of Footer ******/


/****** Projects ******/

#projects {
  margin-top: 60px;
  height: 100%;
}
#publication, #reference{
  margin-left: 20px;
}
#publication + .footer>.grid, #reference + .footer>.grid{
  margin:0 0 0 20px;
}
#publication + .footer img,#reference + .footer img{
  margin-left:0px;
}
#publist {
  max-width: 800px;
}
.project {
  padding: 1% 3%;
  width: 25%;
  float: left;
}
.project h5, .projectlong h5 {
  font-size: 20px;
  color: #39465A;
}
.project:hover {
  background-color: rgba(57, 70, 90, .06);
  transition: all 0.3s;
  -moz-transition: all 0.3s;
  -webkit-transition: all 0.3s;
  -o-transition: all 0.3s;
}
.project img {
  width: 100%;
  margin-bottom: 5%;
  background-color: black;
  border-style: solid;
  border-color:#DDD;
  border-width: 1px;
}
.collaborators {
  text-transform: uppercase;
  color: #2E3C51;
  font-size: 10px;
}
.maxH {
  height: auto;
}
#detail {
  position: relative;
  min-height: 530px;
}
.projectlong .col-8-12 {
  width: 60% !important;
}
.projectlong {
  padding-top: 60px;
  width: 100%;
  z-index: 1;
}
.longdesc, .quotes {
  max-width: 525px;
}
.hanging {
  max-width: 1000px; /* unused */
  padding-left: 22px ;
  text-indent: -22px ;
}
.longdesc, .quotes, .exhibitions, .links {
  margin-bottom: 40px;
}
.quotes span {
  margin-top: 5px;
}
.projectlong img {
  margin: 20px;
  max-width: 400px;
  width: 100%;
  background-color: #EEE;
}
.projectlong ul {
  padding: 0;
}
.projectlong ul {
  line-height: 1.8em;
  letter-spacing: 0.1em;
}
.projectlong ul li {
  letter-spacing: 0;
  line-height: 1.5em;
}
.projectlong ul.exhibitions li {
  margin-bottom: 0.3em;
  line-height: 1.4em !important;
}
#close {
  display: none;
  padding: 1em 2em;
  background-color: rgba(0, 0, 0, .3);
  position: fixed;
  top: 60px;
  right: 0;
  z-index: 30;
}
.bottomNav {
  position: absolute;
  background-color: white;
  bottom: 0;
  left: 0;
  width: 100%;
  border-top: solid 2px #39465A;
  z-index: 15;
  height: 80px;
}
.bottomNav p {
  margin: 15px 20px;
  display: inline-block;
  line-height: 1.6em;
  font-weight: 600;
}
.bottomNav p span {
  text-transform: uppercase;
  color: #AAA;
  letter-spacing: .5px;
}
.bottomNav .nextPage {
  float: right;
}
.bottomNav p a {
  display: block;
}
.video{
  width:100%;
  max-width: 400px;
  margin:20px;
  position:relative;
  background-color: black;
}
.video img{
  opacity:.6;
  margin:0 !important;
}
.video + p{
  margin:-10px 20px 10px;
  background-color: white;
  color:grey;
  width:100%;
  font-size: 12px;
}
a.fancybox:hover{
  text-decoration: none !important;
}
video{
  max-width:640px;
  width:100%;
}

.play {
  display: block;
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-left: 24px solid rgba(255,255,255,.95);
  margin: 40px auto 20px auto;
  position: absolute;
  z-index: 1;
  transition: all 0.3s;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  margin:auto;
  top:0;
  bottom:0;
  left: 0;
  right: 0;
}
.play:before {
  content: '';
  position: absolute;
  top: -30px;
  left: -46px;
  bottom: -30px;
  right: -14px;
  border-radius: 50%;
  border: 4px solid rgba(255,255,255,.95);
  z-index: 2;
  transition: all 0.3s;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
}
.play:after {
  content: '';
  opacity: 0;
  transition: opacity 0.6s;
  -webkit-transition: opacity 0.6s;
  -moz-transition: opacity 0.6s;
}
.play:hover:before, .play:focus:before {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
}
.play.active {
  border-color: transparent;
}
.play.active:after {
  content: '';
  opacity: 1;
  width: 20px;
  height: 32px;
  background: rgba(255,255,255,.95);
  position: absolute;
  right: 2px;
  top: -16px;
  border-left: 8px solid rgba(255,255,255,.95);
  box-shadow: inset 12px 0 0 0 rgba(0, 0, 0, 0.6);
}

/* links */

.projectlong a, .bottomNav p a, #about a {
  color: #004d66;
  text-decoration: none;
}
.projectlong a:hover, .bottomNav p a:hover, #about a:hover {
  text-decoration: underline;
}

/****** End of Projects ******/


/****** Other Pages ******/

#about .biophoto {
  margin-left: 0!important;
}
canvas {
  z-index: 1;
  position: absolute;
  top: 60px;
}
#reference ul {
  list-style: disc;
}

.fancybox-video {
  display: none;
  width:640px;
}


/****** End of Other Pages ******/


/* ==========================================================================
   General Template
   ========================================================================== */

html, body {
  font-size: 14px;
  line-height: 1.4;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
h1, h2, h3, h4, h5, p {
  margin-bottom: 0.8em;
}
h4 {
  margin-top: 2rem;
  font-size: 2em;
}
h5 {
  margin-top: 1rem;
  font-size: 1em;
}
p {
  font-size: 1em;
  margin-bottom: 1.2em;
  line-height: 1.4em;
}
i {
  font-weight: 200;
}
ul {
  list-style: none;
}
a {
  color: inherit;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}
/* ... */

